infrastructure/observability/karma/resources/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karma
  labels:
    app: karma
    component: observability
spec:
  parentRefs:
    - name: gateway-internal
      namespace: networking
      sectionName: https
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - alerts.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: karma
          port: 80
          kind: Service
          group: ""
          weight: 1
